# GenuineDB

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  install-deps.sh
analysis/: common.py  detock.py  graph_processing.py  modules.py  plot_generators.py  profiling.py  requirements.txt  result_processing.py
analysis/experiments/: clocks.py  convoy_effect.py  costs.py  glog_variants.py  jitter.py  mh_scaling.py  scalability.py  tpcc.py
analysis/helper/: helper_plots.py
common/: CMakeLists.txt  async_log.h  batch_log.cpp  batch_log.h  bitmap.h  configuration.cpp  configuration.h  constants.h  csv_writer.h  finished_subtransaction.cpp  finished_subtransaction.h  memory_allocation_utils.h  metrics.cpp  metrics.h  proto_utils.cpp  proto_utils.h  replication_utils.h  stub_utils.h  sync_log.h  types.h
common/log/: deterministic_merge_log.cpp  deterministic_merge_log.h  log.h  multi_slot_log.cpp  multi_slot_log.h  pessimistic_dm_log.cpp  pessimistic_dm_log.h
connection/: poller.cpp  sender.cpp  zmq_utils.h
docker_files/: baseDockerfile  gprofDockerfile  gprofngDockerfile
docs/: aws.md  generic_cluster.md  glog_readme.md  grid5000.md  result_analysis.md
execution/: execution.cpp  execution.h  key_value.cpp  tpcc.cpp
execution/tpcc/: deliver.cpp  load_tables.cpp  load_tables.h  metadata_initializer.cpp  metadata_initializer.h  new_order.cpp  order_status.cpp  payment.cpp  stock_level.cpp  table.h  transaction.h
experiments/: base_settings.json
experiments/aws/: detock_pr.conf  glog.conf  slog.conf  tiga.conf  tpcc.json
grid5000/: grid5000_clean.py  grid5000_config_creator.py  grid5000_initialize_machines.py  list_job_machines.py  start_up.sh  sync.sh
module/: CMakeLists.txt  consensus.cpp  forwarder.cpp  forwarder.h  log_manager.cpp  log_manager.h  multi_home_orderer.cpp  multi_home_orderer.h  scheduler.cpp  scheduler.h  sequencer.cpp  sequencer.h  server.cpp  server.h  txn_generator.cpp  txn_generator.h
module/base/: networked_module.cpp  networked_module.h
module/glog/: glog.cpp  glog.h  glog_order.cpp  glog_order.h  glog_stub.cpp  glog_stub.h
module/scheduler_components/: ddr_lock_manager.cpp  ddr_lock_manager.h  ddr_lock_manager_common.cpp  ddr_lock_manager_common.h  rma_lock_manager.cpp  rma_lock_manager.h  txn_holder.cpp  txn_holder.h  worker.cpp  worker.h
module/sequencer_components/: batcher.h  (+1 more)
proto/: api.proto  configuration.proto  internal.proto  modules.proto  transaction.proto
service/: benchmark.cpp  glog.cpp  service_utils.h  slog.cpp  tiga.cpp  zip_order.cpp
storage/: CMakeLists.txt  init.cpp  init.h  speculative_mem_only_storage.h
test/: CMakeLists.txt  general_test_util.cpp  general_test_utils.h  glog_test_utils.cpp  glog_test_utils.h  test_utils.cpp  test_utils.h  tiga_test_utils.cpp  tiga_test_utils.h
test/common/: batch_log_test.cpp
test/e2e/: e2e_glog_test.cpp  e2e_test.cpp  e2e_tiga_test.cpp
test/execution/tpcc/: partial_rep_test.cpp  transaction_test.cpp
test/integration/: forwarder_log_manager_test.cpp  forwarder_sequencer_test.cpp
test/integration/tiga_integration/: scheduler_worker_test.cpp
test/logs/: dm_slot_log_test.cpp  multi_slot_log_test.cpp  pessimistic_slot_log_test.cpp
test/module/: forwarder_test.cpp  log_manager_test.cpp  scheduler_test.cpp  sequencer_test.cpp  server_test.cpp  workload_test.cpp
test/module/glog_components/: glog_forwarder_test.cpp  glog_order_test.cpp  glog_sequencer_test.cpp  glog_stub_test.cpp  glog_test.cpp
test/module/scheduler_components/: ddr_lock_manager_test.cpp  rma_lock_manager_test.cpp
test/module/tiga_components/: acceptor_test.cpp  coordinator_test.cpp  tiga_scheduler_test.cpp  tiga_server_test.cpp  tiga_worker_test.cpp
tools/: aws.py  base_admin.py  build.sh  build_all.sh  common.py  connection.py  constants.py  generic_config_creator.py  netem.py  requirements.txt  run_experiment.py
workload/: CMakeLists.txt  basic.cpp  basic.h  distribution.h  skewed.cpp  skewed.h  tpcc.cpp  tpcc.h  unique.cpp  unique.h  workload.h  ycsb.cpp  ycsb.h
(+42 files in other folders)
